fix file structure and add README and doc/ and requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,16 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 
+### Python ###
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
 #Custom
 _temp/
 
-playlistItems.json
-videos.json
-output*.txt
+output/*
+!output/.gitkeep
 
 .env
